unpackaged/main/default/objects/nbavs__AvailabilityProfileState__c/nbavs__AvailabilityProfileState__c.object-meta.xml
<CustomObject>
    <label>Availability State</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Availability States</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>