unpackaged/main/default/objects/nbavs__AvailabilityProfileState__c/fields/nbavs__AvailabilityProfile__c.field-meta.xml
<CustomField>
    <fullName>nbavs__AvailabilityProfile__c</fullName>
    <label>Availability Profile</label>
    <referenceTo>nbavs__AvailabilityProfile__c</referenceTo>
    <relationshipName>Availability_Profile_State</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>