unpackaged/main/default/objects/nbavs__AvailabilityProfileState__c/fields/nbavs__DisplayName__c.field-meta.xml
<CustomField>
    <fullName>nbavs__DisplayName__c</fullName>
    <label>Display Name</label>
    <length>32</length>
    <type>Text</type>
</CustomField>