unpackaged/main/default/objects/nbavs__AvailabilityProfileState__c/fields/nbavs__GroupManagementAction__c.field-meta.xml
<CustomField>
    <fullName>nbavs__GroupManagementAction__c</fullName>
    <label>Group Management Action</label>
    <length>32</length>
    <type>Text</type>
</CustomField>