unpackaged/main/default/objects/nbavs__AvailabilityProfileState__c/fields/nbavs__Id__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Id__c</fullName>
    <externalId>true</externalId>
    <label>Id</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>